--- a/styles/css/Samurai.css
+++ b/styles/css/Samurai.css
@@ -4,11 +4,52 @@
 }
 
 body {
-  background-color: rgb(243, 239, 235);
+  background-color: rgb(0, 0, 0);
 }
 
-button {
-  margin: -100;
+.btnContainer {
+  display: grid;
+  background-color: rgb(34, 36, 36);
+  width: 80%;
+  min-height: 110px;
+  margin: 25px auto;
+  align-items: center;
+  justify-content: center;
+  gap: 5px;
+}
+
+.btn, .restartBtn {
+  width: 100px;
+  display: block;
+  font-family: monospace;
+  font-size: 20px;
+  font-weight: bold;
+  padding: 10px;
+  color: rgb(0, 0, 0);
+  background-color: rgb(255, 255, 255);
+  border: none;
+  outline: 1px solid grey;
+}
+.btn.active, .active.restartBtn {
+  color: white;
+  background-color: rgb(5, 125, 172);
+  transform: scale(0.94);
+}
+.btn:nth-child(4), .restartBtn:nth-child(4) {
+  grid-column: 2/span 1;
+}
+
+.canCon {
+  position: relative;
+}
+
+.restartBtn {
+  position: absolute;
+  top: 160px;
+  left: 39.5%;
+}
+.restartBtn.hide {
+  display: none;
 }
 
 img {
@@ -16,5 +57,7 @@ img {
 }
 
 canvas {
-  border: 1px solid black;
+  max-width: 100%;
+  max-height: 100%;
+  border: 1px solid white;
 }/*# sourceMappingURL=Samurai.css.map */
