--- a/styles/Samurai.scss
+++ b/styles/Samurai.scss
@@ -6,19 +6,52 @@
  body {
     background-color: rgb(0, 0, 0);
   }
+  .instruction {
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   align-items: center;
+   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+   background-color: white;
+   width: 80%;
+   height: 70%;
+   margin: 70px auto;
+   padding:20px 10px;
+   border-radius: 20px;
+   gap:10px;
+   h2 {
+      color:rgb(21, 82, 204)
+   }
+   .htp {
+      padding-inline:30px;
+      background-color: rgb(249, 252, 255);
+      display:flex;
+      flex-direction: column;
+      gap:10px;
+      span {
+         color: rgb(31, 77, 177);
+      }
+   }
+   ul {
+      font-size: 17px;
+      font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+      li {
+   list-style: none;
+      }
+   }
+  }
   .btnContainer {
    display: grid;
    background-color: rgb(34, 36, 36);
    width:80%;
    min-height: 110px;
    margin:25px auto;
-//   grid-template-columns: repeat(auto-fill,minmax(100px,1fr));
   align-items: center;
   justify-content: center;
   gap: 5px;
   }
   .btn {
-   // place-self: center;
+   cursor:pointer;
    width: 100px;
    display: block;
    font-family: monospace;
@@ -44,12 +77,10 @@
   }
   .restartBtn {
    @extend .btn;
+   cursor:pointer;
    position: absolute;
    top: 160px;
    left: 39.5%;
-   &.hide {
-      display:none;
-   }
   }
   img {
    display:none;
@@ -59,4 +90,11 @@
    max-width: 100%;
    max-height: 100%;
    border: 1px solid white;
+}
+.start {
+   @extend .btn;
+   color: rgb(18, 88, 194);
+}
+.hide {
+   display:none;
 }
