--- a/styles/css/Samurai.css
+++ b/styles/css/Samurai.css
@@ -7,6 +7,41 @@ body {
   background-color: rgb(0, 0, 0);
 }
 
+.instruction {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+  background-color: white;
+  width: 80%;
+  height: 70%;
+  margin: 70px auto;
+  padding: 20px 10px;
+  border-radius: 20px;
+  gap: 10px;
+}
+.instruction h2 {
+  color: rgb(21, 82, 204);
+}
+.instruction .htp {
+  padding-inline: 30px;
+  background-color: rgb(249, 252, 255);
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.instruction .htp span {
+  color: rgb(31, 77, 177);
+}
+.instruction ul {
+  font-size: 17px;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+}
+.instruction ul li {
+  list-style: none;
+}
+
 .btnContainer {
   display: grid;
   background-color: rgb(34, 36, 36);
@@ -18,7 +53,8 @@ body {
   gap: 5px;
 }
 
-.btn, .restartBtn {
+.btn, .start, .restartBtn {
+  cursor: pointer;
   width: 100px;
   display: block;
   font-family: monospace;
@@ -30,12 +66,12 @@ body {
   border: none;
   outline: 1px solid grey;
 }
-.btn.active, .active.restartBtn {
+.btn.active, .active.start, .active.restartBtn {
   color: white;
   background-color: rgb(5, 125, 172);
   transform: scale(0.94);
 }
-.btn:nth-child(4), .restartBtn:nth-child(4) {
+.btn:nth-child(4), .start:nth-child(4), .restartBtn:nth-child(4) {
   grid-column: 2/span 1;
 }
 
@@ -44,12 +80,10 @@ body {
 }
 
 .restartBtn {
+  cursor: pointer;
   position: absolute;
   top: 160px;
   left: 39.5%;
-}
-.restartBtn.hide {
-  display: none;
 }
 
 img {
@@ -60,4 +94,12 @@ canvas {
   max-width: 100%;
   max-height: 100%;
   border: 1px solid white;
+}
+
+.start {
+  color: rgb(18, 88, 194);
+}
+
+.hide {
+  display: none;
 }/*# sourceMappingURL=Samurai.css.map */
